# ThreePM-rs

./: .gitmodules  Cargo.toml  MIT  README.md  build.rs
examples/: easymode_raw.rs  easymode_wave.rs  ffi_mp3_to_raw.rs  load_chunks.rs  load_chunks_wave.rs  mp3_to_raw.rs  mp3_to_wave.rs
ffi/: bindgen.h  bindgen.sh
src/: contig_buffer.rs  easy_mode.rs  ffi.rs  ffi_mp3_to_raw.rs  lib.rs  load_chunks.rs  mp3.rs  mp3_concrete.rs  mp3_opaque.rs  mp3_to_raw.rs
src/ffi_wrappers/: data.rs
