[package]
name = "threepm"
version = "0.1.0"
edition = "2021"
categories = ["embedded", "no-std::no-alloc", "multimedia::audio"]
license = "MIT AND RPSL-1.0"
description = "Rust bindings and high-level interface abstraction for ThreePM - a fixed-point MP3 decoding library written in C"

[features]
# add some performance-critical functions to .data memory section
code-in-ram = []

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
hound = {version = "3.5", optional = true }

[dev-dependencies]
byte-slice-cast = { version = "1.2.2" }

[[example]]
name = "mp3_to_raw"
doc-scrape-examples = true

[[example]]
name = "mp3_to_wave"
required-features = ["hound"]

[[example]]
name = "easymode_raw"
doc-scrape-examples = true

[[example]]
name = "easymode_wave"
required-features = ["hound"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
