[package]
name = "threepm"
version = "0.2.0"
edition = "2021"
categories = ["embedded", "no-std::no-alloc", "multimedia::audio"]
license = "MIT AND RPSL-1.0"
description = "Rust bindings and high-level interface abstraction for ThreePM - a fixed-point MP3 decoding library written in C"

[features]
# add some performance-critical functions to .data memory section
code-in-ram = []

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
byte-slice-cast = { version = "1.2.2" }
hound = {version = "3.5" }

[[example]]
name = "mp3_to_raw"
doc-scrape-examples = true

[[example]]
name = "mp3_to_wave"
doc-scrape-examples = false

[[example]]
name = "easymode_wave"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
